Bug 410904 - Umbrello could not open imported source files
Summary: Umbrello could not open imported source files
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.28.80 (KDE Applications 19.07.80)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-14 17:17 UTC by Ralf Habacker
Modified: 2019-08-14 17:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-08-14 17:17:49 UTC
When importing source code, problems are listed in the log window. A click on a corresponding file should open this file in a special editor window, which currently does not work.

STEPS TO REPRODUCE
1. start umbrello
2. import a cpp file containing syntax errors
3. open the log window
4. click on a listed entry

OBSERVED RESULT
A message box raises showing a hint that an io slave could not be started

EXPECTED RESULT
The file should be opened in the editor window
Comment 1 Ralf Habacker 2019-08-14 17:19:33 UTC
Git commit ba0d6ac58fcf46b8f5dc552443ae19d97c41cf1e by Ralf Habacker.
Committed on 14/08/2019 at 17:19.
Pushed by habacker into branch 'Applications/19.08'.

Fix 'Umbrello could not open imported source files'
FIXED-IN 2.29.1 (KDE Applications 19.08.1)

M  +6    -0    umbrello/umlappprivate.h

https://commits.kde.org/umbrello/ba0d6ac58fcf46b8f5dc552443ae19d97c41cf1e
Comment 2 Ralf Habacker 2019-08-14 17:20:55 UTC
Git commit d506eedc48844566b29f0ce758d9e996611b2457 by Ralf Habacker.
Committed on 14/08/2019 at 17:20.
Pushed by habacker into branch 'Applications/19.08'.

Fixup

M  +1    -1    umbrello/umlappprivate.h

https://commits.kde.org/umbrello/d506eedc48844566b29f0ce758d9e996611b2457