Fix 'Umbrello could not open imported source files'

BUG:410904
FIXED-IN 2.29.1 (KDE Applications 19.08.1)